--- a/app/Views/security/register.html.twig
+++ b/app/Views/security/register.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}S'inscrire{% endblock %}
+
 {% block body %}
     <h1>S'inscrire :</h1>
     {% include 'Modals/forms.html.twig' with {'form': formRegister} %}
