--- a/app/Views/user/all.html.twig
+++ b/app/Views/user/all.html.twig
@@ -19,7 +19,7 @@
                     <td>{{ user.firstname }}</td>
                     <td>{{ user.lastname }}</td>
                     <td>{{ user.email }}</td>
-                    <td><a href="{{ path('family_list', {'id': user.id}) }}">Voir ses familles ({{ user.Families|length }})</a></td>
+                    <td><a href="{{ path('family_list', {'userId': user.id}) }}">Voir ses familles ({{ user.Families|length }})</a></td>
                 </tr>
             {% endfor %}
         </tbody>
