--- a/app/Views/base.html.twig
+++ b/app/Views/base.html.twig
@@ -1,10 +1,6 @@
 <html>
     <head>
         <title>{% block title %}Family Vid{% endblock %}</title>
-
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/main.css">
         {% block stylesheets %}{% endblock %}
@@ -21,16 +17,15 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">RIEN</a>
-                            </li>
-                        </ul>
-                    </div>
                     <div class="d-flex">
                         {% if session.user %}
-                            <a class="nav-link" href="{{ path('user_me') }}">{{ session.user.firstname }} {{ session.user.lastname }}</a>
+                            <div class="dropdown-custom">
+                                <a class="nav-link" href="{{ path('user_me') }}">{{ session.user.firstname }} {{ session.user.lastname }} <i class="arrow down"></i></a>
+                                <ul>
+                                    <li><a href="{{ path('family_list_mines') }}">Mes familles</a></li>
+                                    <li><a href="{{ path('family_demands') }}">Demandes</a></li>
+                                </ul>
+                            </div>
                             <a class="nav-link" href="{{ path('security_logout') }}">
                                 Se déconnecter
                             </a>
