Remove useless bootstrap

--- a/app/Views/Modals/forms.html.twig
+++ b/app/Views/Modals/forms.html.twig
@@ -38,7 +38,7 @@
 	{% endfor %}
 	</table>
 	<input name="action" type="hidden" value="{{ form.config.actionName }}"/>
-	<input class="btn-custom" type="submit" value="{{ form.config.submit }}"/>
+	<input class="btn" type="submit" value="{{ form.config.submit }}"/>
 </form>
 
 {% if errors is defined %}
