--- a/app/Views/family/list_mines.html.twig
+++ b/app/Views/family/list_mines.html.twig
@@ -23,14 +23,14 @@
     <ul>
         {% for family in session.user.Families %}
             <li class="family" id="family-{{ family.id }}">
-                <span>{{ family.name }}</span><a class="btn-custom" href="javascript:displayDemandForm({{ family.id }})">Modifier</a>
+                <span>{{ family.name }}</span><a class="btn" href="javascript:displayDemandForm({{ family.id }})">Modifier</a>
                 <div>
                     <form id="form-family-change-display-{{ family.id }}" action="{{ path('family_change_display', {'id': family.id}) }}" method="post">
                         <label>
                             Visible pour les autres
                         </label>
                         <input type="checkbox" name="visible" {% if family.visible %}checked{% endif %}>
-                        <a class="btn-custom" href="javascript:document.getElementById('form-family-change-display-{{ family.id }}').submit()">Valider</a>
+                        <a class="btn" href="javascript:document.getElementById('form-family-change-display-{{ family.id }}').submit()">Valider</a>
                     </form>
                 </div>
             </li>
