--- a/app/Views/base.html.twig
+++ b/app/Views/base.html.twig
@@ -1,43 +1,51 @@
 <html>
     <head>
         <title>{% block title %}Family Vid{% endblock %}</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">-->
         <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/navbar.css">
         {% block stylesheets %}{% endblock %}
         {% block javascripts %}{% endblock %}
         <meta charset="UTF-16">
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-yellow">
-                <div class="container-fluid">
+            <nav>
+                <div class="navbar-left-part">
                     <a class="navbar-brand" href="{{ path('index') }}">
                         Family Vid
                     </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="d-flex">
+                </div>
+                <div class="navbar-right-part">
+                    <ul class="navbar-menu">
                         {% if session.user %}
-                            <div class="dropdown-custom">
-                                <a class="nav-link" href="{{ path('user_me') }}">{{ session.user.firstname }} {{ session.user.lastname }} <i class="arrow down"></i></a>
-                                <ul>
-                                    <li><a href="{{ path('family_list_mines') }}">Mes familles</a></li>
-                                    <li><a href="{{ path('family_demands') }}">Demandes</a></li>
-                                </ul>
-                            </div>
-                            <a class="nav-link" href="{{ path('security_logout') }}">
-                                Se déconnecter
-                            </a>
+                            <li>
+                                <div class="dropdown">
+                                    <a class="nav-link" href="{{ path('user_me') }}">{{ session.user.firstname }} {{ session.user.lastname }} <i class="arrow down"></i></a>
+                                    <ul>
+                                        <li><a href="{{ path('family_list_mines') }}">Mes familles</a></li>
+                                        <li><a href="{{ path('family_demands') }}">Demandes</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="{{ path('security_logout') }}">
+                                    Se déconnecter
+                                </a>
+                            </li>
                         {% else %}
-                            <a class="nav-link" href="{{ path('security_register') }}">
-                                S'inscrire
-                            </a>
-                            <a class="nav-link" href="{{ path('security_login') }}">
-                                Se connecter
-                            </a>
+                            <li>
+                                <a class="nav-link" href="{{ path('security_register') }}">
+                                    S'inscrire
+                                </a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="{{ path('security_login') }}">
+                                    Se connecter
+                                </a>
+                            </li>
                         {% endif %}
-                    </div>
+                    </ul>
                 </div>
             </nav>
         </header>
