--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -1,10 +1,3 @@
-nav {
-    border-bottom: 3px solid #C8AF00;
-}
-.bg-yellow {
-    background-color: #E0C300 !important;
-}
-
 main {
     padding: 20px;
     text-align: center;
@@ -12,13 +5,14 @@ main {
     height: 100%;
 }
 
-main * {
+body, main * {
     margin: 0 auto;
 }
 
 main li {
     list-style-type: none;
     margin-left: -40px;
+    margin-bottom: 10px;
 }
 
 h1 {
@@ -56,7 +50,7 @@ td {
     padding: 5px 10px;
 }
 
-.btn-custom {
+.btn {
     padding: 5px 25px;
     background-color: #C3AB00;
     border-radius: 30px;
@@ -64,52 +58,13 @@ td {
     vertical-align: middle;
     margin: 10px;
     display: inline-block;
+    text-decoration: none;
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.btn-custom:hover {
+.btn:hover {
     background-color: #9B8801;
     text-decoration: none;
     color: black;
-}
-
-.dropdown-custom {
-    position: relative;
-    display: inline-block;
-}
-.dropdown-custom ul {
-    display: none;
-    position: absolute;
-    min-width: 160px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    padding: 12px 16px;
-    z-index: 1;
-    background-color: #E0C300;
-}
-
-.dropdown-custom ul li {
-    list-style-type: none;
-}
-.dropdown-custom ul li:hover {
-    background-color: #C0A300;
-}
-.dropdown-custom ul li a {
-    text-decoration: none;
-}
-
-.dropdown-custom:hover ul{
-    display: block;
-}
-
-.arrow {
-    border: solid black;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 3px;
-    margin-top: -12px;
-    margin-left: 5px;
-}
-
-.down {
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
 }
