--- a/app/Views/family/list_mines.html.twig
+++ b/app/Views/family/list_mines.html.twig
@@ -23,7 +23,9 @@
     <ul>
         {% for family in session.user.Families %}
             <li class="family" id="family-{{ family.id }}">
-                <span>{{ family.name }}</span><a class="btn" href="javascript:displayDemandForm({{ family.id }})">Modifier</a>
+                <span>{{ family.name }}</span>
+                <a class="btn" href="{{ path('section_index', {'familyId': family.id}) }}">Voir</a>
+                <a class="btn" href="javascript:displayDemandForm({{ family.id }})">Modifier</a>
                 <div>
                     <form id="form-family-change-display-{{ family.id }}" action="{{ path('family_change_display', {'id': family.id}) }}" method="post">
                         <label>
