Can create a section in a family

--- a/app/Views/index.html.twig
+++ b/app/Views/index.html.twig
@@ -3,8 +3,8 @@
 {% block body %}
     <h1>Bienvenue sur Family Vid!</h1>
 
-    {% if flash.show_family_failed is defined %}
-        <p style="color: red">{{ flash.show_family_failed }}</p>
+    {% if flash.access_family_failed is defined %}
+        <p style="color: red">{{ flash.access_family_failed }}</p>
     {% endif %}
 
     <div>
