Add media in dataase, and can see medias in a section

--- a/app/Views/section/index.html.twig
+++ b/app/Views/section/index.html.twig
@@ -8,12 +8,18 @@
     {% if flash.section_success is defined %}
         <p style="color: green">{{ flash.section_success }}</p>
     {% endif %}
+    {% if flash.section_failed is defined %}
+        <p style="color: green">{{ flash.section_failed }}</p>
+    {% endif %}
 
     {% if family.Sections|length > 0 %}
         <h2>Les rubriques :</h2>
         <ul>
             {% for section in family.Sections %}
-                <li>{{ section.name }}</li>
+                <li>
+                    <span>{{ section.name }}</span>
+                    <a class="btn" href="{{ path('section_view', {'sectionId': section.id, 'familyId': family.id}) }}">Voir</a>
+                </li>
             {% endfor %}
         </ul>
         <h2>Vous pouvez aussi en créer une nouvelle</h2>
