--- a/app/Views/section/view.html.twig
+++ b/app/Views/section/view.html.twig
@@ -5,6 +5,10 @@
 {% block body %}
     <h1>{{ section.name }}</h1>
 
+    {% if flash.media_success %}
+        <p style="color: green">{{ flash.media_success }}</p>
+    {% endif %}
+
     {% if section.Medias|length > 0 %}
         <h2>Les photos/videos :</h2>
         <ul>
@@ -12,8 +16,10 @@
                 <li>{{ media.name }}</li>
             {% endfor %}
         </ul>
+        <h2>Vous pouvez aussi ajouter une nouvelle photo/video dans cette rubrique!</h2>
+        <a class="btn" href="{{ path('section_new_media', {'familyId': section.Family.id, 'sectionId': section.id}) }}">Créer</a>
     {% else %}
         <h2>Il semblerait qu'il n'y ait pas de media dans cette rubrique</h2>
-        <a class="btn" href="#">Créer en une!</a>
+        <a class="btn" href="{{ path('section_new_media', {'familyId': section.Family.id, 'sectionId': section.id}) }}">Créer en une!</a>
     {% endif %}
 {% endblock %}
