--- a/app/Views/media/index.html.twig
+++ b/app/Views/media/index.html.twig
@@ -8,18 +8,25 @@
     {% if flash.media_success %}
         <p style="color: green">{{ flash.media_success }}</p>
     {% endif %}
+    {% if flash.media_failed %}
+        <p style="color: red">{{ flash.media_failed }}</p>
+    {% endif %}
 
     {% if section.Medias|length > 0 %}
         <h2>Les photos/videos :</h2>
         <ul>
             {% for media in section.Medias %}
-                <li>{{ media.name }}</li>
+                <li>
+                    <span>{{ media.name }}</span>
+                    <a class="btn" href="{{ path('media_edit', {'familyId': section.Family.id, 'sectionId': section.id, 'mediaId': media.id}) }}">Editer</a>
+                    {% include 'media/_delete_form.html.twig' with {'mediaId': media.id, 'sectionId': section.id, 'familyId': section.Family.id} %}
+                </li>
             {% endfor %}
         </ul>
         <h2>Vous pouvez aussi ajouter une nouvelle photo/video dans cette rubrique!</h2>
         <a class="btn" href="{{ path('media_new', {'familyId': section.Family.id, 'sectionId': section.id}) }}">Créer</a>
     {% else %}
-        <h2>Il semblerait qu'il n'y ait pas de media dans cette rubrique</h2>
+        <h2>Il semblerait qu'il n'y ait pas de photo/video dans cette rubrique</h2>
         <a class="btn" href="{{ path('media_new', {'familyId': section.Family.id, 'sectionId': section.id}) }}">Créer en une!</a>
     {% endif %}
 {% endblock %}
