--- a/app/Views/media/index.html.twig
+++ b/app/Views/media/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}{{ section.name }}{% endblock %}
 
 {% block body %}
+    <a class="btn back-btn" href="{{ path('section_index', {'familyId': section.Family.id}) }}">Retour</a>
     <h1>{{ section.name }}</h1>
 
     {% if flash.media_success %}
