--- a/app/Views/media/new.html.twig
+++ b/app/Views/media/new.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Ajout de photo/vidéo{% endblock %}
 
 {% block body %}
+    <a class="btn back-btn" href="{{ path('media_index', {'familyId': familyId, 'sectionId': sectionId}) }}">Retour</a>
     <h1>Ajout de photo/vidéo</h1>
 
     {% include 'Modals/forms.html.twig' with {'form': mediaForm} %}
