--- a/app/Views/user/all.html.twig
+++ b/app/Views/user/all.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Les utilisateurs{% endblock %}
 
 {% block body %}
+    <a class="btn back-btn" href="{{ referer }}">Retour</a>
     <h1>Tout les utilisateurs</h1>
     <table>
         <thead>
