--- a/app/Views/media/_delete_form.html.twig
+++ b/app/Views/media/_delete_form.html.twig
@@ -1,3 +1,3 @@
-<form method="post" action="{{ path('media_delete', {'mediaId': mediaId, 'sectionId': sectionId, 'familyId': familyId}) }}" onsubmit="return confirm('Êtes vous sûre de vouloir supprimer cette photo/vidéo? Il n\'y a pas de corbeille')">
+<form class="form-btn"  method="post" action="{{ path('media_delete', {'mediaId': mediaId, 'sectionId': sectionId, 'familyId': familyId}) }}" onsubmit="return confirm('Êtes vous sûre de vouloir supprimer cette photo/vidéo? Il n\'y a pas de corbeille')">
     <input class="btn" type="submit" value="Supprimer">
 </form>
