--- a/app/Views/media/edit.html.twig
+++ b/app/Views/media/edit.html.twig
@@ -7,4 +7,7 @@
     <h1>Editer la {{ media.type == 'video' ? 'vidéo' : 'photo' }} {{ media.name }}</h1>
 
     {% include 'Modals/forms.html.twig' with {'form': mediaForm} %}
+    <br/>
+    <br/>
+    {% include 'media/_delete_form.html.twig' with {'mediaId': media.id, 'sectionId': media.Section.id, 'familyId': media.Section.FamilyId} %}
 {% endblock %}
