--- a/app/Views/section/edit.html.twig
+++ b/app/Views/section/edit.html.twig
@@ -7,4 +7,7 @@
 	<h1>Editer {{ section.name }}</h1>
 
 	{% include 'Modals/forms.html.twig' with {'form': sectionForm} %}
+	<br/>
+	<br/>
+	{% include 'section/_delete_form.html.twig' with {'sectionId': section.id, 'familyId': section.Family.id} %}
 {% endblock %}
