--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -36,8 +36,9 @@ input:not([type="submit"]) {
 
 input[type="submit"] {
     margin-top: 10px;
-    background-color: #D3BB00;
-    border: 1px solid black;
+    background-color: #C3AB00;
+    border: 0;
+    cursor: pointer;
 }
 
 th,td {
@@ -48,6 +49,14 @@ th {
 }
 td {
     padding: 5px 10px;
+}
+
+table .btn {
+    margin: 0;
+}
+
+.form-btn {
+    display: inline-block;
 }
 
 .btn {
