--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -1,8 +1,10 @@
+html {
+    background-color: #FFF298;
+}
+
 main {
     padding: 20px;
     text-align: center;
-    background-color: #FFF298;
-    height: 100%;
 }
 
 body, main * {
