--- a/app/Views/user/all.html.twig
+++ b/app/Views/user/all.html.twig
@@ -8,7 +8,7 @@
 
 {% block body %}
     <a class="btn back-btn" href="{{ path('index') }}">Accueil</a>
-    <h1>Tout les utilisateurs</h1>
+    <h1>Tous les utilisateurs</h1>
     <input type="text" placeholder="Tapez un mot clé..." id="input_search">
     <table>
         <thead>
