replace 'Filtrer' by 'Trier'

--- a/app/Views/media/index.html.twig
+++ b/app/Views/media/index.html.twig
@@ -27,7 +27,7 @@
     {% if section.Medias|length > 0 %}
         <div id="search-headband">
             <div>
-                <label for="sortBy_filter">Filtrer par</label>
+                <label for="sortBy_filter">Trier par</label>
                 <select id="sortBy_filter">
                     <option value="date">Date</option>
                     <option value="name">Nom</option>
