--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -30,6 +30,10 @@ nav a, nav a:hover{
     color: black
 }
 
+a {
+    color: black;
+}
+
 input:not([type="submit"]) {
     border-radius: 20px;
     border: 1px solid black;
@@ -84,4 +88,10 @@ table .btn {
     position: absolute;
     top: 70px;
     left: 20%;
+}
+
+.right-top-button  {
+    position: absolute;
+    top: 70px;
+    right: 10%;
 }
