--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -90,7 +90,7 @@ table .btn {
     left: 20%;
 }
 
-.right-top-button  {
+.right-top-buttons  {
     position: absolute;
     top: 70px;
     right: 10%;
