--- a/app/Views/user/all.html.twig
+++ b/app/Views/user/all.html.twig
@@ -4,6 +4,9 @@
 
 {% block javascripts %}
     <script src="/js/search_user.js"></script>
+    <script>
+        allUser = true;
+    </script>
 {% endblock %}
 
 {% block body %}
