--- a/app/Views/Modals/forms.html.twig
+++ b/app/Views/Modals/forms.html.twig
@@ -1,13 +1,3 @@
-{% if flash is defined %}
-	{% if flash.errors is defined and flash.errors[form.config.actionName] is defined %}
-		{% set errors = flash.errors[form.config.actionName] %}
-	{% endif %}
-
-	{% if flash.datas[form.config.actionName] is defined and flash.datas[form.config.actionName]|keys|length > 0 %}
-		{% set datas = flash.datas[form.config.actionName] %}
-	{% endif %}
-{% endif %}
-
 <form action="{{ form.config.action }}" method="{{ form.config.method }}">
 	<table class="form-table">
 
@@ -39,8 +29,8 @@
 			<input
 					type="{{ field.type }}"
 					name="{{ name }}"
-					{% if datas is defined %}
-						value="{{ datas[name] }}"
+					{% if flash.datas[form.config.actionName] is defined and flash.datas[form.config.actionName]|keys|length > 0 %}
+						value="{{ flash.datas[form.config.actionName][name] }}"
 					{% elseif field.value is defined %}
 						{% if field.type == "checkbox" %}
 							{{ field.value ? "checked" : "" }}
@@ -64,9 +54,9 @@
 	<input class="btn" type="submit" value="{{ form.config.submit }}"/>
 </form>
 
-{% if errors is defined %}
+{% if flash.errors[form.config.actionName] is defined and flash.errors[form.config.actionName]|length > 0  %}
 	<ul>
-	{% for error in errors %}
+	{% for error in flash.errors[form.config.actionName] %}
 		<li style="color: red;">{{ error }}</li>
 	{% endfor %}
 	</ul>
