--- a/app/public/css/user_me.css
+++ b/app/public/css/user_me.css
@@ -9,3 +9,11 @@
 	right: 150px;
 	top: 150px;
 }
+
+.forms {
+	display: flex;
+	flex-direction: row;
+	width: 50%;
+	justify-content: space-around;
+	margin-top: 200px;
+}
