--- a/app/Views/media/edit.html.twig
+++ b/app/Views/media/edit.html.twig
@@ -9,5 +9,5 @@
     {% include 'Modals/forms.html.twig' with {'form': mediaForm} %}
     <br/>
     <br/>
-    {% include 'media/_delete_form.html.twig' with {'mediaId': media.id, 'sectionId': media.Section.id, 'familyId': media.Section.FamilyId} %}
+    {% include 'Modals/forms.html.twig' with {'form': deleteMediaForm} %}
 {% endblock %}
