--- a/app/Views/user/me.html.twig
+++ b/app/Views/user/me.html.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Vous informations personnelles</h1>
+    <h1>Vos informations personnelles</h1>
 
     <a class="families-link btn" href="{{ path('family_list_mines') }}">Mes familles ({{ session.user.Families|length }})</a>
     <a class="demands-link btn" href="{{ path('family_demands') }}">Demandes de cooptations ({{ demands|length }})</a>
